--- a/vishnu_sahasranam.html
+++ b/vishnu_sahasranam.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>अन्नपूर्णास्तोत्रम्</title>
+    <title>॥ श्री विष्णु सहस्रनाम स्तोत्रम् ॥</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
